# splitflap

./: .gitignore  devenv.nix
controller/: Cargo.toml
controller/src/: main.rs  menu.rs
module-driver/: Cargo.toml  sender.py  test.py
module-driver/.cargo/: config
module-driver/src/: main.rs  module_logic.rs  motor_driver.rs  parser.rs
pcb/moduleDriver/: moduleDriver.kicad_pcb  moduleDriver.kicad_pro  moduleDriver.kicad_sch  sym-lib-table  ~moduleDriver.kicad_sch.lck
pcb/moduleDriver/bom/: ibom.html
pcb/moduleDriver/jlcpcb/: moduleDriver-B_Cu.gbl  moduleDriver-B_Mask.gbs  moduleDriver-B_Paste.gbp  moduleDriver-B_Silkscreen.gbo  moduleDriver-Edge_Cuts.gm1  moduleDriver-F_Cu.gtl  moduleDriver-F_Mask.gts  moduleDriver-F_Paste.gtp  moduleDriver-F_Silkscreen.gto  moduleDriver-NPTH.drl  moduleDriver-PTH.drl  moduleDriver-User_Comments.gbr
