[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
embassy-executor = {version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"]}
embassy-futures = "0.1.0"
embassy-rp = { git="https://github.com/embassy-rs/embassy.git", features = ["time-driver", "critical-section-impl", "nightly", "unstable-traits"]}
embassy-time = { version =  "0.1.3", features = ["nightly", "unstable-traits"] }
panic-halt = "0.2.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
embassy-sync = "0.2.0"
heapless = "0.7.16"
hd44780-driver = { path = "/home/nils/Developpement/rust/rust-embedded/hd44780-driver", features = ["async"]}
